--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,6 +1,7 @@
 #about {
     background-image: url("../img/brick-bg.png");
     background-repeat: repeat;
+    background-size: cover;
 
     #about-nav {
     background-color: #343a40;
