--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,3 @@
-#home {
-    background-image: url("../img/bg-home.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    height: 100vh;
-}
-
 .home-icon {
     height: 8rem;
 }
@@ -15,8 +7,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 15rem;
-    height: 66vh;
+    height: 82vh;
+    background-image: url("../img/bg-home.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: center center;
 
     .frame {
         display: flex;
