--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     justify-content: space-evenly;
-    padding-top: 2rem;
+    padding-top: 1.5rem;
 
     a {
         font-size: 3rem;
